--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /db/target/
+
+#
+README.html
+README.md~
+*~
+db/src/main/dbschema/*~
+
