--- a/db/src/main/dbschema/liquibase.mysql.properties
+++ b/db/src/main/dbschema/liquibase.mysql.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/dbschema/master.xml
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost/denmark
-username=root
-password=ingimar
+username=roger
+password=roger
 verbose=true 
 dropFirst=false
