--- a/db/src/main/dbschema/liquibase.postgresql.properties
+++ b/db/src/main/dbschema/liquibase.postgresql.properties
@@ -1,7 +1,7 @@
 changeLogFile=src/main/dbschema/master.xml
 driver = org.postgresql.Driver
 url = jdbc:postgresql://localhost:5432/denmark
-username=ingimar
-password=ingimar
+username=roger
+password=roger
 verbose=true 
 dropFirst=false
